# first_agentic

./: LICENSE  README.md  comandos poetry.txt  pyproject.toml  requirements.txt
docs/: 01_protocol.md  02_three_agents_architecture.md  03_dummy_execution.md  04_repo_sandbox.md
src/first_agentic/agents/: coder.py  orchestrator.py  reviewer.py  sandbox_coder.py  sandbox_orchestrator.py  sandbox_reviewer.py
src/first_agentic/core/: demo_runner.py  demo_tasks.py  sandbox_runner.py  sandbox_tasks.py
src/first_agentic/domain/: contracts.py  enums.py  models.py
src/first_agentic/orchestration/: engine.py
src/first_agentic/repo/: __init__.py  adapter.py  models.py
tests/unit/: test_engine.py  test_repo_adapter.py  test_sandbox_flow.py  test_three_agent_flow.py
